[metadata]
# replace with your username:
name = DecipherAPIClient-razvan-cretu
version = 0.0.1
author = Razvan Cretu
author_email = razvan.cretu@dynata.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8